extends Control

func _on_bot達o_fase_1_pressed():
	get_tree().change_scene_to_file("res://Scenes/Fase1.tscn")

func _on_bot達o_fase_2_pressed():
	get_tree().change_scene_to_file("res://Scenes/Fase2.tscn")

func _on_bot達o_fase_3_pressed():
	get_tree().change_scene_to_file("res://Scenes/Fase3.tscn")

func _on_bot達o_fase_4_pressed():
	get_tree().change_scene_to_file("res://Scenes/Fase4.tscn")
